--- a/themes/PaperMod/layouts/partials/extend_head.html
+++ b/themes/PaperMod/layouts/partials/extend_head.html
@@ -1,4 +1,10 @@
-{{- /* Head custom content area start */ -}}
-{{- /*     Insert any custom code (web-analytics, resources, etc.) - it will appear in the <head></head> section of every page. */ -}}
-{{- /*     Can be overwritten by partial with the same name in the global layouts. */ -}}
-{{- /* Head custom content area end */ -}}
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id={{site.Params.analytics.google.SiteVerificationTag}}"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', '{{site.Params.analytics.google.SiteVerificationTag}}');
+</script>
+<!-- End of Global site tag (gtag.js) - Google Analytics -->
